# neuralT

./: CMakeLists.txt  main.cpp  main.h
